CSS File Updated to fix overflow

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
   display: flex;
   overflow-x: hidden;
   margin: 0;
-  width: fit-content;
+  width: 100%;
 }
 
 .nav {
@@ -21,7 +21,7 @@ html {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  position: relative;
+  position: absolute;
   right: 24px;
 }
 
@@ -79,7 +79,7 @@ html {
   background-image: url("img/top circles.png");
   background-repeat: no-repeat;
   background-size: cover;
-  width: fit-content;
+  width: 100%;
   justify-content: center;
   margin: 0;
 }
@@ -239,7 +239,7 @@ h1:hover {
   justify-content: center;
   text-align: center;
   color: #fff;
-  padding: 20px 125px;
+  padding: 20px 20px;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -251,7 +251,18 @@ h1:hover {
   font-size: 20px;
   font-weight: normal;
   line-height: 28px;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 20px;
+}
+
+.contact img {
+  text-align: center;
+  margin: auto;
+  justify-content: center;
   padding: 10px 10px;
+  color: #fff;
 }
 
 .work {
@@ -260,7 +271,6 @@ h1:hover {
   background-size: cover;
   width: 100%;
   color: #fff;
-  padding: 10px 10px;
   display: grid;
   grid-template-columns: 100%;
   margin: 0;
@@ -339,6 +349,7 @@ body {
   align-items: center;
   justify-content: center;
   width: 100%;
+  margin: 0;
 }
 
 .lang h3 {
@@ -601,14 +612,13 @@ body {
 .w3 h3,
 .w4 h3 {
   position: static;
-  width: 327px;
+  width: 100%;
   height: 105px;
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 32px;
   line-height: 44px;
-  display: flex;
   align-items: center;
   color: #fff;
 }
@@ -636,7 +646,7 @@ button {
 .w2p,
 .w3p,
 .w4p {
-  width: 327px;
+  width: 100%;
   top: 129px;
   font-family: "Inter", sans-serif;
   font-style: normal;
@@ -672,6 +682,9 @@ button {
   flex-direction: row;
   list-style-type: none;
   padding: 10px 10px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .css {
